install/kubernetes/gateway.yaml
# 添加代理8080端口的gateway，需要在istio-ingressgateway 的相关配置中打开8080端口
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingress
  servers:
  - hosts:
    - '*'          # 此处不能修改为域名，不然泛域名没法用
    port:
      name: http-8080
      # number: 80 # isito-ingress容器默认参数不支持暴露80,443等低端口，手动修改gateway配置后，对应ingress SVC的targetPort配置也需要配套修改
      number: 8080
      protocol: HTTP       # TCP 协议需要vs tcp match 端口后才会开启
